--- a/Admission_CRUD/src/main/resources/application.properties
+++ b/Admission_CRUD/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 spring.mvc.view.suffix=.jsp
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springBootcrud2
+spring.datasource.url=jdbc:mysql://localhost:3306/test1
 spring.datasource.username=root
 spring.datasource.password=root
 
